[4.4.8. 로그인 Ajax 구현 & CSRF] Ajax Flow 그리기

--- a/docs/lecture/4.authentication.md
+++ b/docs/lecture/4.authentication.md
@@ -349,5 +349,27 @@ protected void configure(AuthenticationManagerBuilder auth) throws Exception {
     - public void init(H http) throws Exception - 초기화
     - public void configure(H http) - 설정
 
-
 ### 4.4.8. 로그인 Ajax 구현 & CSRF
+
+- 시나리오
+    1. 인증되지 않은 사용자의 페이지 접근
+        - 인증되지 않은 사용자의 접근 시, 인증 예외 발생하여 로그인 페이지로 리다이렉트
+
+    2. 인증은 되었으나 인가되지 않은 자원에 접근
+        - 권한이 부족한 사용자는 인가 예외로 권한 부족에 대한 메시지 노출
+
+
+- AjaxFilter가 추가된 FilterChain
+    0 = {WebAsyncManagerIntegrationFilter@12087} 
+    1 = {SecurityContextPersistenceFilter@12088} 
+    2 = {HeaderWriterFilter@12089} 
+    3 = {CsrfFilter@12090} 
+    4 = {LogoutFilter@12091} 
+    5 = {AjaxLoginProcessingFilter@12092} 
+    6 = {RequestCacheAwareFilter@12093} 
+    7 = {SecurityContextHolderAwareRequestFilter@12094} 
+    8 = {AnonymousAuthenticationFilter@12095} 
+    9 = {SessionManagementFilter@12096} 
+    10 = {ExceptionTranslationFilter@12097} 
+    11 = {FilterSecurityInterceptor@12098} 
+
